--- a/views/email.html
+++ b/views/email.html
@@ -49,7 +49,7 @@
 
 <section class="pt-2 mb-3">
   <h5>登录邮箱</h5>
-  <form method="post" action="/email">
+  <form method="post">
     <div>
       <input type="hidden" type="email" name="account[oldEmail]" value="{{account.oldEmail}}">
     </div>
@@ -72,7 +72,7 @@
   {% if not user.verified %}
     <div class="d-flex align-items-center">
       <span>邮箱未验证</span>
-      <form action="/email/request-verification" method="post">
+      <form action="{{env.basePath}}/email/request-verification" method="post">
         <button class="btn btn-link">重新发送验证邮件</button>
       </form>
     </div>
@@ -81,32 +81,32 @@
 
 <section>
   <h5>邮件设置</h5>
-  <form method="post" action="/email/newsletter">
+  <form method="post" action="{{env.basePath}}/email/newsletter">
     <div class="form-check">
       <input class="form-check-input"
         id="letterTodayFocus"
-        type="checkbox"
-        name="letter[todayFocus]"
-        value="true"
-        {% if letter.todayFocus %} checked{% endif %}>
+          type="checkbox"
+          name="letter[todayFocus]"
+          value="true"
+          {% if letter.todayFocus %} checked{% endif %}>
       <label class="form-check-label" for="letterTodayFocus">接收“今日焦点”邮件</label>
     </div>
     <div class="form-check">
       <input class="form-check-input"
-      id="letterWeeklyChoice"
-      type="checkbox"
-      name="letter[weeklyChoice]"
-      value="true"
-      {% if letter.weeklyChoice %} checked{% endif %}>
+        id="letterWeeklyChoice"
+        type="checkbox"
+        name="letter[weeklyChoice]"
+        value="true"
+        {% if letter.weeklyChoice %} checked{% endif %}>
       <label class="form-check-label" for="letterWeeklyChoice">接收“一周精选”邮件</label>
     </div>
     <div class="form-check">
       <input class="form-check-input"
-      id="letterAfternoonExpress"
-      type="checkbox"
-      name="letter[afternoonExpress]"
-      value="true"
-      {% if letter.afternoonExpress %} checked{% endif %}>
+        id="letterAfternoonExpress"
+        type="checkbox"
+        name="letter[afternoonExpress]"
+        value="true"
+        {% if letter.afternoonExpress %} checked{% endif %}>
       <label class="form-check-label" for="letterAfternoonExpress">接收“午后速递”邮件</label>
     </div>
     <button type="submit" class="btn btn-primary">保存</button>
