--- a/views/login.html
+++ b/views/login.html
@@ -4,7 +4,7 @@
 <div class="row justify-content-center">
   <div class="col-md-7 col-lg-5 col-xl-4">
     <div class="mt-4">
-      {% if not user %}
+    {% if not user %}
       <h4 class="text-center">登录FT中文网</h4>
 
       {% if errors.credentials %}
@@ -61,8 +61,10 @@
         <button class="btn btn-block btn-primary" type="submit">登录</button>
 
       </form>
-      <p class="text-center pt-3">还没有FT中文网账号?<a href="/signup?source=login">创建</a></p>
-      {% endif %}
+      <p class="text-center pt-3">还没有FT中文网账号?<a href="{{env.basePath}}/signup?source=login">创建</a></p>
+    {% else %}
+      <h4>当前登录用户 {{user.name}}</h4>
+    {% endif %}
     </div>
   </div>
 </div>
