--- a/views/account.html
+++ b/views/account.html
@@ -32,7 +32,7 @@
   <section>
     <h5>更改密码</h5>
 
-    <form method="post" action="{{env.basePath}}/account/password">
+    <form method="post" action="/account/password">
       <div class="form-group">
         <label for="oldPassword">当前密码</label>
         <input type="password"
@@ -74,13 +74,13 @@
       </div>
       
       <button type="submit" class="btn btn-primary">保存密码</button>
-      <a href="{{env.basePath}}/password-reset" target="_blank">忘记密码？</a>
+      <a href="/password-reset" target="_blank">忘记密码？</a>
     </form>    
   </section>
 
   <section class="pt-2 mb-3">
     <h5>用户名</h5>
-    <form action="{{env.basePath}}/account/name" method="post">
+    <form action="/account/name" method="post">
 
       <div class="form-group">
         <input class="form-control"
@@ -102,7 +102,7 @@
 
   <section class="pt-2 mb-3">
     <h5>手机号码</h5>
-    <form action="{{env.basePath}}/account/mobile" method="post">
+    <form action="/account/mobile" method="post">
 
       <div class="form-group">
         <input class="form-control"
