--- a/views/signup.html
+++ b/views/signup.html
@@ -41,7 +41,7 @@
 </form>
 <small class="">注册即代表您同意FT中文网<a href="http://www.ftchinese.com/m/corp/service.html" target="_blank">《用户注册协议》</a></small>
 
-<p class="text-center">已有账号？<a href="/login?source=signup">登录</a></p>
+<p class="text-center">已有账号？<a href="{{sitemap.login}}">登录</a></p>
 
 <!-- <button type="button" class="btn btn-secondary btn-block">下载FT中文网APP</button> -->
 {% endblock %}
