--- a/views/email.html
+++ b/views/email.html
@@ -72,7 +72,7 @@
   {% if not user.verified %}
     <div class="d-flex align-items-center">
       <span>邮箱未验证</span>
-      <form action="/email/request-verification" method="post">
+      <form action="{{sitemap.emailRequestVerfication}}" method="post">
         <button class="btn btn-link">重新发送验证邮件</button>
       </form>
     </div>
@@ -81,7 +81,7 @@
 
 <section>
   <h5>邮件设置</h5>
-  <form method="post" action="/email/newsletter">
+  <form method="post" action="{{email.emailNewsletter}}">
     <div class="form-check">
       <input class="form-check-input"
         id="letterTodayFocus"
