--- a/views/password/success.html
+++ b/views/password/success.html
@@ -14,6 +14,6 @@
     <div class="text-center">密码已更新，请登录</div>
   {% endif %}
 
-  <a class="btn btn-primary btn-block" href="/login">返回登录页</a>
+  <a class="btn btn-primary btn-block" href="{{sitemap.login}}">返回登录页</a>
 
 {% endblock %}
