--- a/views/signup/plan.html
+++ b/views/signup/plan.html
@@ -6,7 +6,7 @@
     <h2>欢迎来到FT中文网，{{userinfo.name}}</h2>
 
     <p>成为会员</p>
-    <form action="" method="post">
+    <form method="post">
       <div class="card-deck">
         <div class="card">
           <img class="card-image-top" src="http://via.placeholder.com/350x150" alt="Free">
@@ -44,7 +44,7 @@
         </div>
       </div>
       <small class="form-text text-muted">以后随时可以更改或升级会员资格</small>
-      <a class="btn btn-primary" href="/profile/email">跳过</button>
+      <a class="btn btn-primary" href="{{sitemap.email}}">跳过</button>
     </form>    
   </div>
 </div>
