--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -20,30 +20,46 @@
   <link inline rel="stylesheet" href="/main.css">
 </head>
 <body>
-  <header class="navbar navbar-expand-lg o-header">
+  <header class="navbar navbar-expand-sm navbar-light o-header">
     <div class="container">
 
       <a class="navbar-brand" href="/">FT中文网</a>
 
-      <ul class="navbar-nav">
-        {% if user %}
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">myFT</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-          <div class="dropdown-menu dropdown-menu-right">
-            <h6 class="dropdown-header">{{user.name}}</h6>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{{sitemap.profile}}">设置</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{{sitemap.logout}}">退出</a>
-          </div>
-        </li>
-        {% else %}
-        <li class="nav-item">
-          <a href="{{sitemap.login}}">登录</a> <a href="{{sitemap.signup}}">注册</a>
-        </li>
-        {% endif %}
-      </ul>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav"> 
+          {% if user %}
+            <li class="nav-item dropdown d-none d-sm-inline">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">myFT</a>
+    
+              <div class="dropdown-menu dropdown-menu-right">
+                <h6 class="dropdown-header">{{user.name}}</h6>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{{sitemap.profile}}">设置</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="{{sitemap.logout}}">退出</a>
+              </div>
+            </li>
+            <li class="nav-item d-sm-none">
+              <a class="nav-link" href="{{sitemap.profile}}">{{user.name}}</a>
+            </li>
+            <li class="nav-item d-sm-none">
+              <a class="nav-link" href="{{sitemap.logout}}">退出</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{sitemap.login}}">登录</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{sitemap.signup}}">注册</a>
+            </li>
+          {% endif %}
+        </ul>
+      </div>
+      
     </div>
   </header>
 
