--- a/views/layouts/profile.html
+++ b/views/layouts/profile.html
@@ -12,7 +12,7 @@
     </ul>
   </div>
 
-  <div class="col-9">
+  <div class="col-sm-9">
       <div class="mt-4">
           {% block content %}{% endblock %}
       </div>
