--- a/client/main.css
+++ b/client/main.css
@@ -53,7 +53,17 @@ a:hover {
       color: #fff;
       background-color: #0D7680;
       border-color: #0D7680; }
-  
+      
+  .o-toggler {
+    padding: 0.25rem 0.75rem;
+    font-size: 1.25rem;
+    line-height: 1;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    cursor: pointer;
+  }
+
   .form-label {
     font-weight: 600;
     color: #33302E; }
