use h4 for title

--- a/views/signup.html
+++ b/views/signup.html
@@ -1,7 +1,7 @@
 {% extends "layouts/center.html" %}
 
 {% block content %}
-<div class="text-center">创建FT中文网账号</div>
+<h4 class="text-center">创建FT中文网账号</h4>
 <form method="post">
 
   <div class="form-group">
