--- a/view/address.html
+++ b/view/address.html
@@ -23,7 +23,7 @@
     </div>
     
     <div class="form-group col-md-4">
-      <label for="city">市/县</label>
+      <label for="city">市</label>
       <input type="text"
         id="city"
         class="form-control"
@@ -36,7 +36,7 @@
     </div>
 
     <div class="form-group col-md-4">
-      <label for="district">区</label>
+      <label for="district">区/县</label>
       <input type="text"
         id="district"
         class="form-control"
