--- a/view/email.html
+++ b/view/email.html
@@ -69,14 +69,14 @@
     <button type="submit" class="btn btn-primary">更新</button>
   </form>
 
-  {% if not user.verified %}
+  <!-- {% if not user.verified %}
     <div class="d-flex align-items-center">
       <span>邮箱未验证</span>
       <form action="{{sitemap.emailRequestVerification}}" method="post">
         <button class="btn btn-link">重新发送验证邮件</button>
       </form>
     </div>
-  {% endif %}
+  {% endif %} -->
 </section>
 
 <section>
