--- a/view/profile/membership.html
+++ b/view/profile/membership.html
@@ -2,10 +2,7 @@
 
 {% block content %}
 
-<p>会员类型：</p>
-<p>会员期限：</p>
-<p>权益：</p>
-<a href="#">退订</a>
-<p>退款按照即日起到会员终止日期的比例退还。<a href="#" target="_blank">详情</a></p>
+<p>会员类型：{{membership.tier}}</p>
+<p>会员期限：{{membership.startAt}} - {{membership.expireAt}}</p>
 
 {% endblock %}
