--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -78,7 +78,7 @@
   </footer>
 
   {% if env.isProduction %}
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap.native/2.0.23/bootstrap-native.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap.native/2.0.23/bootstrap-native-v4.min.js"></script>
   {% else %}
   <script src="/bootstrap.native/dist/bootstrap-native-v4.js"></script>
   {% endif %}
