--- a/view/password/enter-email.html
+++ b/view/password/enter-email.html
@@ -24,7 +24,7 @@
         required>
 
       {% if errors.email %}
-        <div class="form-errortext">{{errors.email.message}}</div>
+        <div class="form-errortext">{{errors.email}}</div>
       {% endif %}
 
     </div>
