--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -26,13 +26,46 @@
   <header class="navbar navbar-expand o-header">
     <div class="container">
       <a class="navbar-brand" href="http://www.ftchinese.com" target="__blank">FT中文网</a>
-      {% block headerNav %}{% endblock %}
-    </div>
 
+      {% if user %}
+      <ul class="navbar-nav"> 
+
+        <li class="nav-item dropdown d-none d-sm-inline">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">myFT</a>
+    
+          <div class="dropdown-menu dropdown-menu-right">
+            <h6 class="dropdown-header">{{userAccount.userName}}</h6>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{{sitemap.profile}}">设置</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{{sitemap.logout}}">退出</a>
+          </div>
+        </li>
+    
+        <li class="nav-item d-sm-none">
+          <a class="nav-link" href="{{sitemap.profile}}">myFT</a>
+        </li>
+      </ul>
+    
+      <button class="o-toggler d-sm-none" type="button" data-toggle="collapse" data-target="#sidebarNav" aria-controls="#sidebarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30" focusable="false"><title>Menu</title><path stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"></path></svg>
+      </button>
+      {% else %}
+      <ul class="navbar-nav"> 
+        <li class="nav-item">
+          <a class="nav-link" href="{{sitemap.login}}">登录</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{sitemap.signup}}">注册</a>
+        </li>
+      </ul>
+      {% endif %}
+    </div>
   </header>
 
   <main class="page-content" role="main">
     <div class="container">
+      
       {% if errors.server %}
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
           <span>{{errors.server.message}}</span>
@@ -42,7 +75,38 @@
         </div>
       {% endif %}
 
-      {% block main %}{% endblock %}
+      {% block main %}
+        {% if userAccount and (not userAccount.isVerified) %}
+          <div class="alert alert-primary d-flex align-items-center" role="alert">
+            请验证您的登录邮箱。没有收到验证邮件？
+            <form action="{{sitemap.emailRequestVerification}}" method="post">
+              <button class="btn btn-link">重新发送</button>
+            </form>
+          </div>
+        {% endif %}
+
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="collapse d-sm-block" id="sidebarNav">
+              <nav class="nav flex-column mt-4">
+                {% for item in sideNav %}
+                  <a class="nav-link{% if item.active %} active{% endif %}" href="{{item.href}}">{{item.text}}</a>
+                {% endfor %}
+                  <a class="nav-link d-sm-none" href="{{sitemap.profile}}">{{user.name}}</a>
+                  <a class="nav-link d-sm-none" href="{{sitemap.logout}}">退出</a>
+              </nav>
+            </div>
+            
+          </div>
+      
+          <div class="col-sm-9">
+            <div class="mt-4">
+              {% block content %}{% endblock %}
+            </div>
+          </div>
+        </div>
+
+      {% endblock %}
     </div>
   </main>
 
