--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -68,7 +68,7 @@
       
       {% if errors.server %}
         <div class="alert alert-danger alert-dismissible fade show" role="alert">
-          <span>{{errors.server.message}}</span>
+          <span>{{errors.server}}</span>
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
