--- a/view/password/new-password.html
+++ b/view/password/new-password.html
@@ -14,7 +14,7 @@
         required>
       
       {% if errors.password %}
-        <div class="form-errortext">{{errors.password.message}}</div>
+        <div class="form-errortext">{{errors.password}}</div>
       {% endif %}
     </div>
     <div class="form-group">
@@ -26,7 +26,7 @@
         required>
 
       {% if errors.confirmPassword %}
-        <div class="form-errortext">{{errors.confirmPassword.message}}</div>
+        <div class="form-errortext">{{errors.confirmPassword}}</div>
       {% endif %}
 
     </div>
