--- a/view/account.html
+++ b/view/account.html
@@ -29,7 +29,30 @@
     </div>
   {% endif %}
 
-  <section>
+  <section class="pb-3 mb-3 border-bottom">
+    <h5>登录邮箱</h5>
+    <form method="post">
+      <div>
+        <input type="hidden" type="email" name="account[oldEmail]" value="{{account.oldEmail}}">
+      </div>
+      <div class="form-group">
+        <input class="form-control"
+        id="email"
+        type="email" 
+        name="account[email]" 
+        value="{{account.email}}"
+        required>
+  
+        {% if errors.email %}
+          <div class="form-errortext">{{errors.email}}</div>
+        {% endif %}
+      </div>
+  
+      <button type="submit" class="btn btn-primary">更新</button>
+    </form>
+  </section>
+
+  <section class="pb-3 mb-3">
     <h5>更改密码</h5>
 
     <form method="post" action="{{sitemap.accountPassword}}">
@@ -56,7 +79,7 @@
         <small class="form-text text-muted">最少8个字符，不能使用空格、表情符号</small>
     
         {% if errors.password %}
-          <div class="form-errortext">{{errors.password.message}}</div>
+          <div class="form-errortext">{{errors.password}}</div>
         {% endif %}
       </div>
     
@@ -69,54 +92,13 @@
           required>
     
         {% if errors.confirmPassword %}
-          <div class="form-errortext">{{errors.confirmPassword.message}}</div>
+          <div class="form-errortext">{{errors.confirmPassword}}</div>
         {% endif %}
       </div>
       
       <button type="submit" class="btn btn-primary">保存密码</button>
       <a href="{{sitemap.passwordReset}}" target="_blank">忘记密码？</a>
     </form>    
-  </section>
-
-  <section class="pt-2 mb-3">
-    <h5>用户名</h5>
-    <form action="{{sitemap.accountName}}" method="post">
-
-      <div class="form-group">
-        <input class="form-control"
-          id="name"
-          type="text"
-          name="account[userName]"
-          value="{{account.userName}}">
-
-        <small class="form-text text-muted">20字符以内</small>
-
-        {% if errors.userName %}
-          <div class="form-errortext">{{errors.userName.message}}</div>
-        {% endif %}
-      </div>
-      
-      <button type="submit" class="btn btn-primary">保存</button>
-    </form>
-  </section>
-
-  <section class="pt-2 mb-3">
-    <h5>手机号码</h5>
-    <form action="{{sitemap.accountMobile}}" method="post">
-
-      <div class="form-group">
-        <input class="form-control"
-          id="mobile"
-          type="text"
-          name="account[mobile]"
-          value="{{account.mobileNumber}}">
-
-        {% if errors.mobile %}
-          <div class="form-errortext">{{errors.mobile.message}}</div>
-        {% endif %}
-      </div>
-      <button type="submit" class="btn btn-primary">保存</button>
-    </form>
   </section>
 
 {% endblock %}
