--- a/view/profile/home.html
+++ b/view/profile/home.html
@@ -41,11 +41,11 @@
       <input class="form-control"
         id="mobile"
         type="text"
-        name="profile[mobileNumber]"
-        value="{{profile.mobileNumber}}">
+        name="profile[mobile]"
+        value="{{profile.mobile}}">
 
-      {% if errors.mobileNumber %}
-        <div class="form-errortext">{{errors.mobileNumber}}</div>
+      {% if errors.mobile %}
+        <div class="form-errortext">{{errors.mobile}}</div>
       {% endif %}
     </div>
     <button type="submit" class="btn btn-primary">保存</button>
