--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -76,7 +76,7 @@
       {% endif %}
 
       {% block main %}
-        {% if userAccount and (not userAccount.isVerified) %}
+        {% if user and (not user.isVerified) %}
           <div class="alert alert-primary d-flex align-items-center" role="alert">
             请验证您的登录邮箱。没有收到验证邮件？
             <form action="{{sitemap.emailRequestVerification}}" method="post">
