--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -34,7 +34,7 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">myFT</a>
     
           <div class="dropdown-menu dropdown-menu-right">
-            <h6 class="dropdown-header">{{userAccount.userName}}</h6>
+            <h6 class="dropdown-header">{{user.userName}}</h6>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{{sitemap.profile}}">设置</a>
             <div class="dropdown-divider"></div>
